Ajout des documents des langues
- Les admins peuvent ajouter un document à une langue.
- Les joueurs possédant cette langue peuvent télécharger le document associé.
- Les admins peuvent voir combien de documents enregistrés sur le LarpManager utilisent cette langue.

--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -192,7 +192,7 @@
 								{% endfor %}
 							</div>
 							
-							<h6>Langages connus</h6>
+							<h6>Langues connues</h6>
 							{% set languesAnomalie = personnage.getLanguesAnomaliesMessage() %}
 							{% if languesAnomalie != "" %}
 							<div class="text-warning">{{languesAnomalie}}</div>
