--- a/src/LarpManager/Views/personnage/detail.twig
+++ b/src/LarpManager/Views/personnage/detail.twig
@@ -221,7 +221,7 @@
 				</div>
 				
 				<div class="list-group-item">
-					<h6 class="list-group-item-heading">Langages connus</h6>
+					<h6 class="list-group-item-heading">Langues connues</h6>
 					<p class="list-group-item-text">
 						<ul>
 						{% for personnageLangue in personnage.personnageLangues %}
