--- a/src/LarpManager/Views/langue/detail.twig
+++ b/src/LarpManager/Views/langue/detail.twig
@@ -70,7 +70,28 @@
 						</ul>
 					</p>
 				</div>
-				
+
+	    		<div class="list-group-item">
+		    		<h4 class="list-group-item-heading">Liste des documents rédigés dans cette langue ({{ langue.documents|length }} documents)</h4>
+    				<p class="list-group-item-text">
+						<ul>
+						{% for document in langue.documents %}
+							<li>{{ document.titre }}</li>
+						{% endfor %}
+						</ul>
+					</p>
+				</div>
+
+				<div class="list-group-item">
+					<h4 class="list-group-item-heading">Abécédaire</h4>
+					<p class="list-group-item-text">
+						{% if langue.documentUrl %}
+							<a href="{{ path('langue.admin.document',{'langue': langue.id}) }}">Téléchargez l'abécédaire</a>.
+						{% else %}
+							Aucun abécédaire n'est disponible.
+						{% endif %}
+					</p>
+				</div>
 				<div class="list-group-item">
   					<div class="btn-group" role="group" aria-label="...">
   						<a  class="btn btn-primary" role="button" href="{{ path('langue.update', {index : langue.id}) }}">Modifier</a>
