--- a/src/LarpManager/Views/langue/detail.twig
+++ b/src/LarpManager/Views/langue/detail.twig
@@ -86,7 +86,7 @@
 					<h4 class="list-group-item-heading">Abécédaire</h4>
 					<p class="list-group-item-text">
 						{% if langue.documentUrl %}
-							<a href="{{ path('langue.admin.document',{'langue': langue.id}) }}">Téléchargez l'abécédaire</a>.
+							<a href="{{ path('langue.admin.document',{'langue': langue.id}) }}">Téléchargez</a>
 						{% else %}
 							Aucun abécédaire n'est disponible.
 						{% endif %}
