--- a/src/LarpManager/Views/langue/fragment/list.twig
+++ b/src/LarpManager/Views/langue/fragment/list.twig
@@ -48,7 +48,7 @@
 
 		<p class="list-group-item-text">
 			{% if langue.documentUrl %}
-				<strong>Abécédaire : </strong><a href="{{ path('langue.admin.document',{'langue': langue.id}) }}">Téléchargez l'abécédaire</a>.
+				<strong>Abécédaire : </strong><a href="{{ path('langue.admin.document',{'langue': langue.id}) }}">Téléchargez</a>
 			{% else %}
 				Aucun abécédaire n'est disponible.
 			{% endif %}
