--- a/src/LarpManager/Views/admin/personnage/updateLangue.twig
+++ b/src/LarpManager/Views/admin/personnage/updateLangue.twig
@@ -15,8 +15,7 @@
 	<div class="well bs-component">
 		<form action="{{ path('personnage.admin.update.langue',{'personnage':personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
 			<fieldset>
-				<legend>{{ personnage.publicName }} - <small>Choix des langues</small></legend>
-				<p>Choisissez les langues du personnage</p>
+				<legend>Choix des langues</legend>
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 	
 				{{ form_row(form.langues) }}
