Sortilege to sort

--- a/src/LarpManager/Views/admin/domaine/detail.twig
+++ b/src/LarpManager/Views/admin/domaine/detail.twig
@@ -25,9 +25,9 @@
 	</div>
 	
 	<div class="panel panel-default">
-		<div class="panel-heading"><h4>Liste des sortilèges</h4></div>
+		<div class="panel-heading"><h4>Liste des sorts</h4></div>
 		<div class="panel-body">
-			<a href="{{ path('magie.sort.add') }}"><i class="fa fa-plus"></i> Ajouter un sortilège</a>
+			<a href="{{ path('magie.sort.add') }}"><i class="fa fa-plus"></i> Ajouter un sort</a>
 			<div class="list-group">
 			{% for sort in domaine.sorts %}
 				<div class="list-group-item">
