--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -395,7 +395,7 @@
 								</div>
 								
 								<div class="list-group-item">
-									<h6 class="list-group-item-heading">Lié aux langages :</h6>
+									<h6 class="list-group-item-heading">Lié aux langues :</h6>
 									{% for materiel in langueMateriel %}
 											<div class="list-group-item-text"><strong>{{ materiel }}</strong></div>
 									{% else %}
