--- a/src/LarpManager/Views/admin/sort/detail.twig
+++ b/src/LarpManager/Views/admin/sort/detail.twig
@@ -1,13 +1,13 @@
 {% extends "layout.twig" %}
 
-{% block title %}Sortilèges{% endblock title %}
+{% block title %}Sorts{% endblock title %}
 
 {% block content %}
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('magie.sort.list') }}">Liste des sortilèges</a></li>
-		<li class="active">Détail d'un sortilège</li>
+		<li><a href="{{ path('magie.sort.list') }}">Liste des sorts</a></li>
+		<li class="active">Détail d'un sort</li>
 	</ol>
 
 	<div class="list-group">
