--- a/src/LarpManager/Views/admin/sphere/delete.twig
+++ b/src/LarpManager/Views/admin/sphere/delete.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}Sortilèges{% endblock title %}
+{% block title %}Sorts{% endblock title %}
 
 {% block content %}
 
