--- a/src/LarpManager/Views/homepage/menu.twig
+++ b/src/LarpManager/Views/homepage/menu.twig
@@ -126,7 +126,7 @@
 						<li><a href="{{ path('token.list') }}">Jetons</a></li>
 						<li><a href="{{ path('construction') }}">Constructions</a></li>
 						<li><a href="{{ path('magie.domaine.list') }}">Domaine de magie</a></li>
-						<li><a href="{{ path('magie.sort.list') }}">Sortilèges</a></li>
+						<li><a href="{{ path('magie.sort.list') }}">Sorts</a></li>
 						<li><a href="{{ path('magie.potion.list') }}">Potions</a></li>
 						<li><a href="{{ path('magie.sphere.list') }}">Sphères</a></li>
 						<li><a href="{{ path('magie.priere.list') }}">Prières</a></li>
