--- a/src/LarpManager/Views/public/magie/index.twig
+++ b/src/LarpManager/Views/public/magie/index.twig
@@ -22,7 +22,7 @@
 			<table class="table table-condensed table-bordered">
 				<thead>
 					<tr>
-						<th>Niveau du sortilège</th>
+						<th>Niveau du sort</th>
 						<th>1</th>
 						<th>2</th>
 						<th>3</th>
