--- a/src/LarpManager/Views/admin/sort/add.twig
+++ b/src/LarpManager/Views/admin/sort/add.twig
@@ -1,20 +1,20 @@
 {% extends "layout.twig" %}
 
-{% block title %}Sortilège{% endblock title %}
+{% block title %}Sort{% endblock title %}
 
 {% block content %}
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('magie.sort.list') }}">Liste des sortilèges</a></li>
-		<li class="active">Ajouter un sortilège</li>
+		<li><a href="{{ path('magie.sort.list') }}">Liste des sorts</a></li>
+		<li class="active">Ajouter un sort</li>
 	</ol>
 	
 	
 	<div class="well bs-component">
 		<form action="{{ path('magie.sort.add') }}" method="POST" {{ form_enctype(form) }} novalidate>
 			<fieldset>
-				<legend>Ajout d'un sortilège</legend>
+				<legend>Ajout d'un sort</legend>
 					{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 					{{ form(form) }}
 			</fieldset>
