--- a/src/LarpManager/Views/admin/sort/delete.twig
+++ b/src/LarpManager/Views/admin/sort/delete.twig
@@ -1,20 +1,20 @@
 {% extends "layout.twig" %}
 
-{% block title %}Sortilèges{% endblock title %}
+{% block title %}Sorts{% endblock title %}
 
 {% block content %}
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('magie.domaine.list') }}">Liste des sortilèges</a></li>
-		<li class="active">Supprimer un sortilège</li>
+		<li><a href="{{ path('magie.domaine.list') }}">Liste des sorts</a></li>
+		<li class="active">Supprimer un sort</li>
 	</ol>
 	
 	
 	<div class="well bs-component">
 		<form action="{{ path('magie.sort.delete', {'sort': sort.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
 			<fieldset>
-				<legend>Supression d'un sortilège</legend>
+				<legend>Supression d'un sort</legend>
 					{{ sort.label }} -- {{ sort.niveau }}
 					{{ sort.description|markdown }}
 					{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
