--- a/src/LarpManager/Views/admin/sort/list.twig
+++ b/src/LarpManager/Views/admin/sort/list.twig
@@ -11,7 +11,7 @@
 	
 	<div class="well well-sm">
 	
-		<a href="{{ path('magie.sort.add') }}"><i class="fa fa-plus"></i> Ajouter un sortilège</a>
+		<a href="{{ path('magie.sort.add') }}"><i class="fa fa-plus"></i> Ajouter un sort</a>
 		
 		<ul class="list-group">
 		{% for sort in sorts %}
