--- a/src/LarpManager/Views/personnage/sort.twig
+++ b/src/LarpManager/Views/personnage/sort.twig
@@ -10,7 +10,7 @@
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 		<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
 		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }}</a></li>
-		<li class="active">Choix d'un nouveau sortilège</li>
+		<li class="active">Choix d'un nouveau sort</li>
 	</ol>
 	
 	<div class="well bs-component">
