--- a/src/LarpManager/Views/admin/personnage/add.twig
+++ b/src/LarpManager/Views/admin/personnage/add.twig
@@ -13,7 +13,7 @@
 	<div class="well bs-component">	
 		<form action="{{ path('personnage.admin.add', {'participant' : participant.id}) }}" method="POST" {{ form_enctype(form) }}>
 			<fieldset>
-				<legend>Ajout d'un personnage, pour l'utilisateur {{ participant.user }}</legend>
+				<legend>Ajout d'un personnage pour l'utilisateur {{ participant.user }}</legend>
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 	
 				{{ form_row(form.nom) }}
