--- a/src/LarpManager/Views/public/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/public/groupeSecondaire/detail.twig
@@ -122,7 +122,7 @@
 		<div class="row">
 		{% for membre in groupeSecondaire.membres %}
 			{% if membre.personnage.participeTo(participant.gn) %}
-				<div class="col-xs-6 col-md-3">
+				<div class="col-xs-6 col-md-2">
 					{% if membre.personnage.trombineUrl %}
 						<img class="media-object" width="160" src="{{ path('personnage.trombine', {'personnage' : membre.personnage.id }) }}" />
 					{% else %}
@@ -130,7 +130,7 @@
 					{% endif %}
 					<div class="caption">
 						{{ membre.personnage.publicName }}
-						{% if groupeSecondaire.responsable %}
+						{% if groupeSecondaire.responsable == participant.personnage.publicName %}
 							{% if groupeSecondaire.secondaryGroupType.label == 'Religion' %}
 								{% for personnageReligion in membre.personnage.personnagesReligions %}
 									<li>{{ personnageReligion.religion.label }} - {{ personnageReligion.religionLevel.label }}</li>
