--- a/src/LarpManager/Views/public/user/detail.twig
+++ b/src/LarpManager/Views/public/user/detail.twig
@@ -57,16 +57,16 @@
 		        {% for participant in user.participants %}
 			        <div class="list-group-item">
 			        	<div>
-			        		Participe à {{ participant.gn.label }}
+			        		Participe à {{ participant.gn.label }}.
 			        	</div>
 			        	
 			        	{% if participant.groupeGn %}
 			        		<div>
-			        			Membre du groupe 
+			        			Membre du groupe :
 			        			{% if is_granted('ROLE_ORGA', app.user) %}
-			        				<a href="{{ path('groupe.detail',{'index':participant.groupeGn.groupe.id})  }}">{{ participant.groupeGn.groupe.nom }}</a>
+			        				<a href="{{ path('groupe.detail',{'index':participant.groupeGn.groupe.id}) }}">#{{ participant.groupeGn.groupe.numero }} - {{ participant.groupeGn.groupe.nom }}</a>
 			        			{% else %}
-			        				<a href="{{ path('groupeGn.groupe',{'groupeGn':participant.groupeGn.id})  }}">{{ participant.groupeGn.groupe.nom }}</a>
+			        				<a href="{{ path('groupeGn.groupe',{'groupeGn':participant.groupeGn.id}) }}">#{{ participant.groupeGn.groupe.numero }} - {{ participant.groupeGn.groupe.nom }}</a>
 			        			{% endif %}
 			        		</div>
 			        	{% endif %}
