Fix pugilat/heroisme calcule

--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -368,7 +368,7 @@
 	  							</div>
 	  						</div>
 	  					</nav>
-						<div class="panel-body">						
+						<div class="panel-body">
 							<div class="list-group">
 							
 								<div class="list-group-item">
@@ -378,9 +378,9 @@
 								<div class="list-group-item">
 									<h6 class="list-group-item-heading">Héroïsme : {{ personnage.heroisme|default(0) }}</h6>
 								</div>
-								
+					
 								<div class="list-group-item">
-									<h6 class="list-group-item-heading">Richesse : {{ personnage.richesse|default(0) }} PA</h6>
+									<h6 class="list-group-item-heading">Richesse : {{ personnage.richesse|default(0) }} pièces d'argent</h6>
 								</div>
 								
 								<div class="list-group-item">
