--- a/src/LarpManager/Views/admin/personnageSecondaire/update.twig
+++ b/src/LarpManager/Views/admin/personnageSecondaire/update.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<ol class="breadcrumb">
-	  <li><a href="{{ path('personnageSecondaire') }}">Personnages secondaires</a></li>
+	  <li><a href="{{ path('personnageSecondaire.list') }}">Personnages secondaires</a></li>
 	  <li class="active">Modifier</li>
 	</ol>
 
