Moteur de la Chronologie d'un personnage

--- a/src/LarpManager/Views/public/personnage/detail.twig
+++ b/src/LarpManager/Views/public/personnage/detail.twig
@@ -77,6 +77,7 @@
 						
 					{% include 'public/personnage/fragment/info.twig' with {'personnage': personnage, 'participant' : participant} %}
 					{% include 'public/personnage/fragment/origine.twig' with {'personnage': personnage, 'participant': participant} %}
+					{% include 'public/personnage/fragment/chronologie.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/pugilat.twig' with {'personnage': personnage} %}
 					{% include 'public/personnage/fragment/competence.twig' with {'personnage': personnage, 'participant': participant} %}
 				</div>
