--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -510,8 +510,9 @@
 						<nav class="navbar navbar-default" style="margin-bottom: 0px;">
 	  						<div class="container-fluid">
 	  							<div class="navbar-header">
-	  								<span class="navbar-brand">Lignage</span>
+	  								<span class="navbar-brand">Lignée</span>
 	  							</div>
+								{% if personnage.personnageLignee %}
 	  							<div class="collapse navbar-collapse">
 	  								<ul class="nav navbar-nav navbar-right">
 		  								<li class="dropdown">
@@ -520,16 +521,17 @@
 								      			<span class="caret"></span>
 								    		</a>
 											<ul class="dropdown-menu">
-												<li><a href="{{ path('personnage.admin.lignee.add', {'personnage': personnage.id}) }}">Ajouter un lignage</a></li>
+												<li><a href="{{ path('personnage.admin.lignee.add', {'personnage': personnage.id}) }}">Ajouter une lignée</a></li>
 											</ul>
 										</li>
 	  								</ul>
 	  							</div>
+								{% endif %}
 	  						</div>
 	  					</nav>
 	  					<div class="panel-body">
 							<div class="list-group">
-								{# Gestion du lignage du personnage #}
+								{# Gestion de la lignée du personnage #}
 								{% for lignage in personnage.personnageLignee %}
 									{% if lignage.lignee %}<div class="list-group-item">Lignee : {{ lignage.lignee.nom }}</div>{% endif %}
 									<div class="list-group-item">Parent : {{ lignage.parent1.nom }}</div>
