--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -512,7 +512,7 @@
 	  							<div class="navbar-header">
 	  								<span class="navbar-brand">Lignée</span>
 	  							</div>
-								{% if personnage.personnageLignee %}
+								{% if not personnage.personnageLignee %}
 	  							<div class="collapse navbar-collapse">
 	  								<ul class="nav navbar-nav navbar-right">
 		  								<li class="dropdown">
