Change la diffusion Ancienne en Rare
Change la diffusion Ancienne en Rare

--- a/src/LarpManager/Views/langue/detail.twig
+++ b/src/LarpManager/Views/langue/detail.twig
@@ -38,7 +38,7 @@
 			    	<h4 class="list-group-item-heading">Degré de diffusion</h4>
 			    	<p class="list-group-item-text">
 			    		{% if langue.diffusion == 0 %}
-			    			Ancien
+			    			Rare
 			    		{% elseif langue.diffusion == 1 %}
 			    			Courant
 			    		{% else %}
