Amélioration de la liste des langues
Uniformisation des degrés de diffusion des langues
Amélioration des détails de la liste des langues

--- a/src/LarpManager/Views/langue/detail.twig
+++ b/src/LarpManager/Views/langue/detail.twig
@@ -42,7 +42,7 @@
 			    		{% elseif langue.diffusion == 1 %}
 			    			Courant
 			    		{% else %}
-			    			Très répandu
+			    			Commune
 			    		{% endif %}
 			    	</p>
 			    </div>
