--- a/src/LarpManager/Views/public/renom.twig
+++ b/src/LarpManager/Views/public/renom.twig
@@ -108,7 +108,7 @@ li.pin:hover {
 					<figcaption class="menu">
 						<nav class="navbar navbar-default" style="margin-bottom: 0px; border-radius:0;">
   							<div class="navbar-header">
-					  			<span class="navbar-brand">{{ personnage.nom }}</span>
+					  			<span class="navbar-brand">{{ personnage.publicName }}</span>
 				  			</div>
 						</nav>
 					</figcaption>
